--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,14 @@
 plugins {
     id 'java'
+    id 'application'
+}
+
+application {
+    mainClass = 'hexlet.code.App'
+}
+
+compileJava {
+    options.release = 21
 }
 
 group = 'hexlet.code'
@@ -17,3 +26,5 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+
